fix(snippets): move scrollbar to code blocks, add spacing between language name and code and update header style

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -28,22 +28,35 @@
     @apply px-1 bg-aoc-gray-darkest border border-aoc-gray-darker rounded;
   }
 
-  .code-highlight pre {
-    @apply px-6 py-4 border border-aoc-gray-darker rounded;
-    @apply bg-dark !important;
+  .code-highlight * {
+    @apply last:mb-0
+  }
 
-    position: relative;
+  .code-highlight h1 {
+    @apply border-aoc-gray-darker border-b font-semibold mb-4 pb-2 text-4xl
+  }
+
+  .code-highlight h2 {
+    @apply border-aoc-gray-darker border-b font-semibold my-4 pb-1.5 text-2xl
+  }
+
+  .code-highlight h3 {
+    @apply font-semibold my-4 text-lg
+  }
+
+  .code-highlight pre {
+    @apply !bg-dark border border-aoc-gray-darker my-4 rounded relative;
   }
 
   .code-highlight pre::before {
+    @apply absolute border-aoc-gray-darker border-b border-l capitalize font-medium px-2 right-0
+    rounded-bl top-0 text-aoc-gray text-sm;
+
     content: attr(lang);
-    text-transform: capitalize;
+  }
 
-    position: absolute;
-    top: -1px;
-    right: -1px;
-
-    @apply px-2 border border-aoc-gray-darker text-aoc-gray font-medium text-sm rounded-tr;
+  .code-highlight pre code {
+    @apply block pb-4 pt-6 px-6 overflow-x-scroll scrollbar-chrome w-full;
   }
 
   details > summary {
